--- a/crwn-clothing/src/components/checkout-item/checkout-item.styles.scss
+++ b/crwn-clothing/src/components/checkout-item/checkout-item.styles.scss
@@ -1,27 +1,41 @@
 .checkout-item-container {
+  width: 100%;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  min-height: 100px;
+  border-bottom: 1px solid darkgrey;
+  padding: 15px 0;
+  font-size: 20px;
   align-items: center;
-  border-bottom: 1px solid gray;
-  padding: 10px 10px 10px 0;
-  height: 350px;
 
-  img {
-    height: 100%;
-    object-fit: cover;
+  .image-container {
+    width: 23%;
+    padding-right: 15px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
-}
+  .name,
+  .quantity,
+  .price {
+    width: 23%;
+  }
 
-.delete-checkout-item, .change-checkout-number {
-  font-weight: 700;
-  cursor: pointer;
-}
+  .quantity {
+    display: flex;
 
-.change-checkout-number {
-  padding: 10px;
-}
+    .arrow {
+      cursor: pointer;
+    }
 
-.delete-checkout-item {
-  font-size: 2rem;
+    .value {
+      margin: 0 10px;
+    }
+  }
+
+  .remove-button {
+    padding-left: 12px;
+    cursor: pointer;
+  }
 }
