--- a/crwn-clothing/src/routes/checkout/checkout.styles.scss
+++ b/crwn-clothing/src/routes/checkout/checkout.styles.scss
@@ -1,21 +1,31 @@
 .checkout-container {
- display: flex;
- flex-direction: column;
- margin: 0 auto;
- max-width: 800px;
+  width: 55%;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px auto 0;
 
   .checkout-header {
+    width: 100%;
+    padding: 10px 0;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid darkgrey;
+
+    .header-block {
+      text-transform: capitalize;
+      width: 23%;
+
+      &:last-child {
+        width: 8%;
+      }
+    }
   }
 
-  .purchase-total {
-    font-size: 2rem;
-    font-weight: 500;
-    text-align: right;
-    letter-spacing: normal;
+  .total {
+    margin-top: 30px;
+    margin-left: auto;
+    font-size: 36px;
   }
 }
