Add title to category pages

--- a/crwn-clothing/src/routes/category/category.styles.scss
+++ b/crwn-clothing/src/routes/category/category.styles.scss
@@ -5,3 +5,10 @@
   row-gap: 50px;
   height: fit-content;
 }
+
+.category-title {
+  text-transform: uppercase;
+  font-size: 38px;
+  margin-bottom: 25px;
+  text-align: center;
+}
